src/scss/header.scss
.header {
  width: 100vw;

  color: $white;

  @include flex(column, flex-start, center);

  .content {
    position: relative;
  }

  .navigation-panel {
    position: absolute;
    top: 25px;
    left: 0;
    right: 0;

    @include flex(row, flex-start, center);
  }

  ul {
    @include reset;

    list-style: none;
  }

  .logo {
    @include flex(row, flex-start, center);
    margin-right: 90px;
  }

  .logo-img {
    margin-right: 16px;
  }

  a {
    display: block;

    font-size: 11px;
    color: inherit;

    text-decoration: none;
    text-transform: uppercase;
  }

  .navigation-menu {
    @include flex(row, flex-start);
    
    flex-wrap: wrap;
    gap: 24px;
  }

  .search-form {
    @include flex(row, flex-end);

    flex: 1 0 0;
  }

  .search {
    box-sizing: border-box;
    height: 25px;
    width: 248px;
    padding: 5px 10px;

    color: inherit;

    border: none;
    border-radius: 50px;
    background-color: $dark;
  }
}

@media (width <= 414px) {
  .header {
    .navigation-panel {
      left: 20px;
      right: -20px;

      flex-direction: column;
      align-items: flex-start;
      gap: 18px;
    }

    .navigation-menu {
      flex-direction: column;
      align-items: flex-start;
      gap: 0;
    }

    .search-form,
    form,
    .search {
      width: 100%;
    }
  }
}

